Fix some extra padding on inline ratings

--- a/root/static/styles/rating.css
+++ b/root/static/styles/rating.css
@@ -82,6 +82,10 @@
 	display:inline-block;
 	vertical-align: middle;
 }
+.inline-rating ul {
+    margin: 0;
+    padding: 0;
+}
 
 /* smaller star */
 .small-star{
